2002-10-06  Anders Eriksson  <anders@umunet.org>

	* src/gerbv_screen.h, src/gerbv.c: Added menu selection for
	  units. Decreased width of status bar. This closes the too
	  wide window problem in bug #615475. The default minimum
	  height is still too high to fit in an 800x600 display.
	  By limiting the number of files to 17 or so this problem
	  is also solved.

2002-09-29  Anders Eriksson  <anders@umunet.org>

	* src/gerber.c, src/gerbv.c, src/gerbv_screen.h: Removed last
	  traces of IMG_EXTRA hack. Now using proper aperture width to
	  increase width of bounding box. This may give slightly too
	  big bbox, but it is better than before. I consider this to
	  close bug #605985.

2002-09-17  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in: exportpng is configured in default and removed
	  if asked (--disable-exportpng).
	* configure.in, acconfig.h, src/gerbv_screen.h: Setting of MAX_FILES
	  from ./configure.
	

2002-09-09  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Added version number in main windows title.
	

2002-09-07  Stefan Petersen  <spe@stacken.kth.se>

	* src/batch.c, src/draw.c, src/gerb_image.h, src/gerber.c, 
	  src/gerber.h: Changed how multiquadrant circles are supported.
	  Now it's more of a state, before it was considered an interpolation.
	  Therefore not all multiquadrant circles were detected as such and
	  got defined wrong. Some parts of the EAGLECAD_KLUDGE was removed,
 	  though EagleCad had some other surprises in store.
	* src/amacro.[hc], draw.c, draw_amacro.[hc]: Dynamic allocation
	  of stack when drawing aperture macros. Closes the evil bug 603147.
	

2002-09-02  Stefan Petersen  <spe@stacken.kth.se>

	* src/batch.c, src/draw.c, src/gerb_image.h, src/gerber.c:
	  Polygon drawing got it's own gc (pgc) since we must have 
	  our own outline pen size. Now we don't have to have an aperture
	  defined to be able to draw polygon areas. Closes bug 602965.
	* Removed PAREA_FILL as an interpolation. Has only PAREA_START